--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "fujisaki_ringsig"
 version = "0.0.1"
 authors = ["Michael Rosenberg <42micro@gmail.com>"]
+license = "MIT OR Apache-2.0"
 
+description = "Fujisaki-Suzuki Ring Signatures in Rust"
+keywords = ["ring", "signature", "crypto", "cryptography"]
 repository = "https://github.com/doomrobo/fujisaki-ringsig"
 
 [dependencies]
