--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ repository = "https://github.com/rozbb/fujisaki-ringsig"
 documentation = "https://docs.rs/fujisaki_ringsig"
 
 [dependencies]
-blake2 = "0.6"
-curve25519-dalek = "0.13"
-digest = "0.6"
+blake2 = "0.9"
+curve25519-dalek = "3.0"
+digest = "0.9" # same as blake2
 generic-array = "0.9"
-rand = "0.3"
+rand_core = { version = "0.5", default-features = false } # same as curve25519-dalek
+
+[dev-dependencies]
+rand = "0.8"
