--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,22 @@ name = "fujisaki_ringsig"
 version = "0.0.3"
 authors = ["Michael Rosenberg <micro@fastmail.com>"]
 license = "MIT OR Apache-2.0"
+edition = "2018"
 
 description = "Fujisaki-Suzuki Ring Signatures in Rust"
 keywords = ["ring", "signature", "crypto", "cryptography"]
+categories = ["cryptography", "no-std"]
 repository = "https://github.com/rozbb/fujisaki-ringsig"
 documentation = "https://docs.rs/fujisaki_ringsig"
 
+[features]
+default = ["std"]
+std = ["blake2/std", "curve25519-dalek/std", "digest/std"]
+
 [dependencies]
-blake2 = "0.6"
-curve25519-dalek = "0.13"
-digest = "0.6"
+blake2 = { version = "0.9", default-features = false }
+curve25519-dalek = { version = "3.0", default-features = false, features = ["u64_backend"] }
+digest = { version = "0.9", default-features = false }
 generic-array = "0.9"
-rand = "0.3"
+rand = "0.7"
+rand_core  = { version = "0.5", default-features = false }
