--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ blake2 = { version = "0.9", default-features = false }
 curve25519-dalek = { version = "3.0", default-features = false, features = ["u64_backend"] }
 digest = { version = "0.9", default-features = false }
 generic-array = "0.9"
-rand = "0.7"
 rand_core  = { version = "0.5", default-features = false }
+
+[dev-dependencies]
+rand = "0.7"
